<resources>
    <!--<string name="app_name">BI Stage</string>-->
    <string name="app_name">BI Live</string>
    <string name="submit">Submit</string>
    <string name="select_option">Select Option</string>
    <string name="start_survey">Start Survey</string>
    <string name="edit_survey">Edit Survey</string>
    <string name="previous">Previous</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="main_menu">Main Menu</string>
    <string name="download_survey">Download Survey</string>
    <string name="survey">Survey</string>
    <string name="save">Save</string>
    <string name="survey_list">Survey List</string>
    <string name="survey_id">Survey Id</string>
    <string name="oops_no_data_found">Oops!...no data found.</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="welcome_naresh">Welcome Naresh</string>
    <string name="select_survey">Select Survey</string>
    <string name="start">Start</string>
    <string name="view_starting_points">View Starting Points</string>
    <string name="dashboard">Dashboard</string>
    <string name="nextSurvey">Next Survey</string>
    <string name="starting_points_details">Starting Points Details</string>
    <string name="synchronise">Synchronise</string>
    <string name="bi_survey_app">BI Survey App</string>
    <string name="new_password_will_be_send_to_the_email_id">New Password will be send to the email ID</string>
    <string name="technology_partner_indev_consultancy_pvt_ltd">Technology Partner: Indev Consultancy Pvt. Ltd</string>
    <string name="cluster_id">Cluster id</string>
    <string name="cluster_name">Cluster Name</string>
    <string name="cluster">Cluster</string>
    <string name="action">Action</string>
    <string name="Please_wait">Please Wait</string>
    <string name="sending_password">Sending Password to email</string>
    <string name="hh_name">HH Name</string>
    <string name="status">status</string>
    <string name="start_next_survey">Start Next Survey</string>
    <string name="original_address">Original Address</string>
    <string name="next_address">Next Address</string>
    <string name="previous_address">Previous Address</string>
    <string name="substituted_address">Substituted Address</string>
    <string name="reson_of_selecting_substitute_address">Reason of selecting substitute address</string>
    <string name="select_railway_station">Select Railway Station</string>
    <string name="take_survey">Take Survey</string>
    <string name="select_language">Select Language</string>
    <string name="reason_for_halt">Reason for Halt</string>
    <string name="door_locked">Door Locked</string>
    <string name="hh_cwe_not_available_at_home">HH/CWE not available at home</string>
    <string name="refused">Refused</string>
    <string name="in_eligible_nccs">In eligible NCCS</string>
    <string name="refused_to_continue_interview_after_some_time">Refused to Continue interview after some time</string>
    <string name="in_eligible_age">In eligible age</string>
    <string name="intro_exit">Intro Exit</string>
    <string name="household_size">Ineligible Household Size</string>
    <string name="highest_education">Ineligible Highest Education</string>
    <string name="ine_mosr">Ineligible MOSR</string>
    <string name="ine_dth_connection">Ineligible DTH Connection (Free/Paid)</string>
    <string name="ine_langauage">Ineligible Language</string>
    <string name="age_terminate">Age Terminate</string>
    <string name="terminate">Terminate</string>
    <string name="call_back">Call Back</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="survey_terminated">Survey has been terminated successfully.</string>
    <string name="ok">Ok</string>
    <string name="Alert">Alert</string>
    <string name="select_agent">Select City</string>
    <string name="select_city">Select City</string>
    <string name="start_new_survey">Start New Survey</string>
    <string name="survey_status_in_your_cluster">Survey Status in Your Cluster</string>
    <string name="date_time">Date Time</string>
    <string name="rejected">R</string>
    <string name="completed">C</string>
    <string name="halt">H</string>
    <string name="terminated">T</string>
    <string name="date_11_11_2020_10_25_pm">Date: 11-11-2020 10:25 PM</string>
    <string name="no_internet_data_saved_locally">Internet is not available..!! Your data saved successfully in local database.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_error">Network Error, please check internet connection.</string>
    <string name="reason_of_halt">Please choose reason of halt.</string>
    <string name="pending">P</string>
    <string name="recording">Recording</string>
    <string name="reason_of_selecting_next_address">Reason of selecting next address</string>
    <string name="reason_of_selecting_previous_address">Reason of selecting previous address</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="enter_reason_of_selecting_next_address">Enter reason of selecting next address!</string>
    <string name="enter_reason_of_selecting_previous_address">Enter reason of selecting previous address!</string>
    <string name="enter_reason_of_selecting_substitute_address">Enter reason of selecting substitute address!</string>
    <string name="app_version">App Version :</string>
    <string name="halt_survey">Survey has been Halt successfully.</string>
    <string name="download_new_survey">Download New Survey</string>
    <string name="comment">Comment</string>
    <string name="synchronize_audio">Synchronize Audio</string>
    <string name="select_all">Select All</string>
    <string name="survey_name">Survey Name</string>
    <string name="audio_file">Audio File</string>
    <string name="oops_no_data_pending_for_sync">Oops! No data pending for sync.</string>
    <string name="export_db">Export DB</string>
</resources>
