<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adapters.ClusterAdapter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin8"
            android:background="@drawable/cell_border">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_cluster_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cluster_id"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_16" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_cluster_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cluster_name"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_16" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_16" />
        </TableRow>
    </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>